staff infra readyness
